# TAtouScan

./: README.md  pyproject.toml
.github/workflows/: tatouscan_ci.yml
docs/: conf.py  contributing.md  index.md  installation.md  tests.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_6db1548c3ed59f62___init___py.html  z_6db1548c3ed59f62_annotation_py.html  z_6db1548c3ed59f62_main_py.html  z_6db1548c3ed59f62_models_py.html  z_dde6b6a3f74e515c___init___py.html  z_dde6b6a3f74e515c_fasta_parser_py.html  z_dde6b6a3f74e515c_gff_parser_py.html
tatouscan/: annotation.py  main.py  models.py
tests/: annotation_test.py  models_test.py
