[project]
name = "TAtouScan"
description = " A command-line tool for identifying toxin-antitoxin (TA) systems in genomes and metagenomes. "
dynamic = ["version"]
authors = [
    {name = "Jean Mainguy"},
]
maintainers = [
    {name = "Jean Mainguy"},
]

readme = "README.md"
keywords = ["Bioinformatics", "Prokaryote", "Genomics", "Toxin antitoxin", "Metagenomics"]
classifiers=[
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics"]

license = {file="LICENCE"}

requires-python = ">=3.10"
dependencies = [
    "pyfastx>=2.0.0,<3.0.0",
    "typer>=0.15.0,<0.16.0",
    "pyhmmer>=0.11.0,<0.12.0"
]


[project.optional-dependencies]

doc = [
    "sphinx==6.2.1",
    "sphinx_rtd_theme==1.2.2",
    "readthedocs-sphinx-search==0.3.1",
    "sphinx-autobuild==2021.3.14",
    "myst-parser==1.0.0",
    "docutils==0.18.1", #"myst-nb",
    "nbsphinx==0.9.5",
    "nbsphinx_link==1.3.0",
    "sphinx-book-theme==1.0.1",
    "sphinxcontrib.mermaid",
    "sphinx_togglebutton==0.3.2"
     ]

dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "black"
]
#
[project.urls]
Repository = "https://github.com/JeanMainguy/TAtouScan"
Changelog = "https://github.com/JeanMainguy/TAtouScan/CHANGELOG.md"
Documentation = "https://tatouscan.readthedocs.io"
#
#
[project.scripts]
tatouscan = "tatouscan.main:app"

[tool.setuptools]
packages = ["tatouscan"]


[tool.setuptools.dynamic]
version = {attr = "tatouscan.__version__"}
